# wingedcap-rust-sdk

./: .gitignore  Cargo.toml
src/: lib.rs
src/base/: mod.rs
src/base/api/: get_key_endpoint.rs  get_server_endpoint.rs  mod.rs  ping_key_endpoint.rs  set_key_endpoint.rs
src/base/types/: generic_endpoint_type.rs  key_status_type.rs  mod.rs  secure_channel_type.rs
src/base/utils/: mod.rs  rand_hex_str_util.rs  same_items_util.rs  sender_id_to_service_id_util.rs  sha_256_util.rs
src/base/utils/aes/: aes_decrypt_util.rs  aes_encrypt_util.rs  mod.rs
src/base/utils/ecdsa/: mod.rs  sign_util.rs  verify_util.rs
src/base/utils/time/: get_current_unix_time_util.rs  mod.rs  timeout_util.rs  wait_util.rs
src/client/: mod.rs
src/client/api/: get_key_util.rs  mod.rs  ping_key_util.rs  set_key_util.rs
src/client/types/: key_index_array_type.rs  key_type.rs  key_with_meta_type.rs  mod.rs  receiver_key_set_locked_type.rs  receiver_key_set_state_type.rs  receiver_key_set_type.rs  receiver_key_set_unlocked_type.rs  receiver_key_state_type.rs  receiver_key_state_unlocked_type.rs  receiver_state_type.rs  receiver_stored_type.rs  receiver_type.rs  role_type.rs  sender_key_set_state_type.rs  sender_key_set_type.rs  sender_key_state_type.rs  sender_state_type.rs  sender_stored_type.rs  sender_type.rs  server_meta_type.rs  server_type.rs  server_with_meta_type.rs  vault_conf_type.rs
src/client/utils/: mod.rs
src/server/: mod.rs
src/server/backends/: mod.rs
src/server/types/: handler_type.rs  key_record_type.rs  mod.rs
src/server/utils/: mod.rs
(+30 files in other folders)
