[package]
name = "wingedcap"
description = "wingedcap sdk"
license = "MIT"
version = "0.1.2"
edition = "2024"

[dependencies]
tracing = "0.1.41"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

getrandom = { version = "0.3.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2.16", features = ["js"] }
rand = "0.8"

rsa = "0.8"

x25519-dalek = "2.0.1"

hex = "0.4.3"

sha2 = "0.10.9"
aes-gcm = "0.10.3"
k256 = "=0.13.4"

futures = "0.3"
futures-util = "0.3"

gloo-timers = {version = "0.3.0", features = ["futures"] }

tokio-tungstenite-wasm = { version = "0.6.0", features = ["native-tls"] }


[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.43.0", features = ["sync", "time", "macros", "rt",] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.43.0", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
axum = { version="0.8.4", features = ["ws"] }
tower-http = { version= "0.6.6", features = ["cors"] }